# openspatial-windows

./: .gitignore  OpenSpatialDLL.lib  OpenSpatialServiceController.h  README.md
Nod Installer/: README.txt
Nod Plugin Source/: OpenSpatialServiceController.cpp  OpenSpatialServiceController.h
OpenSpatialExample/: CMakeLists.txt  OpenSpatialExample.cpp  OpenSpatialExample.sln
OpenSpatialExample/OpenSpatialExample/: OpenSpatialDll.lib  OpenSpatialExample.vcxproj  OpenSpatialLogs.sqllite3  stdafx.cpp
OpenSpatialExampleApp/: DllTest.sln  ExampleAppNoDLL.cpp  ExampleAppNoDLL.sln  ExampleAppNoDLL.vcxproj  ExampleAppNoDLL.vcxproj.filters  ExampleDelegate.cpp  ExampleDelegate.h  OpenSpatialServiceController.cpp  OpenSpatialServiceController.h  ReadMe.txt  stdafx.cpp
OpenSpatialExampleApp/Debug/: ExampleAppNoDLL.exp  ExampleAppNoDLL.ilk  ExampleAppNoDLL.lib  ExampleAppNoDLL.pch  vc120.idb
OpenSpatialExampleApp/DllTest/: DllTest.cpp  NodPlugin.h  ReadMe.txt  Settings.h  stdafx.cpp
OpenSpatialExampleApp/ExampleAppNoDLL/: OpenSpatialServiceController.cpp  OpenSpatialServiceController.h
OpenSpatialExampleApp/Release/: ExampleAppNoDLL.exp  ExampleAppNoDLL.lib
OpenSpatialExampleApplication/: ConsoleApplication4.sln
OpenSpatialExampleApplication/ConsoleApplication4/: ConsoleApplication4.cpp  ConsoleApplication4.vcxproj  ConsoleApplication4.vcxproj.filters  ExampleDelegate.cpp  ExampleDelegate.h  OpenSpatialDLL.lib  OpenSpatialServiceController.h  ReadMe.txt  stdafx.cpp  stdafx.h
OpenSpatialExampleApplication/Debug/: ConsoleApplication4.ilk  OpenSpatialDLL.lib
(+39 files in other folders)
